fixing title on mobile

--- a/web/themes/custom/generalredneck_b5/scss/style.scss
+++ b/web/themes/custom/generalredneck_b5/scss/style.scss
@@ -14,3 +14,6 @@ code {
   color: #333;
   background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAJ0lEQVQIW2O8e/fufwYGBgZBQUEQxcCIIfDu3Tuwivfv30NUoAsAALHpFMMLqZlPAAAAAElFTkSuQmCC) repeat;
 }
+.navbar-brand .site-title {
+  white-space: normal;
+}
